# ssl-cert-monitor-lambda

./: Cargo.toml  LICENSE.txt  README.md
src/: cert.rs  error.rs  main.rs
src/data/: cert-expired.der
ssl-cert-monitor-lambda/: Cargo.toml
ssl-cert-monitor-lambda/src/: main.rs
ssl-cert-reporter-lambda/: Cargo.toml
ssl-cert-reporter-lambda/src/: main.rs
