[package]
name = "ssl-cert-reporter-lambda"
version = "0.1.0"
description = "AWS Lambda for reporting expired SSL certificates"

authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
lambda_runtime = "0.11.1"
serde = "1"
thiserror = "1.0.59"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1.40", features = ["log"] }
